--- a/music/pop.html
+++ b/music/pop.html
@@ -46,8 +46,7 @@
                           <a href="https://www.youtube.com/channel/UCc4K7bAqpdBP8jh1j9XZAww" target="_blank"><img
                                   class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
-                  </div>
-                  ,
+                  </div>,
                   considérés comme les pionniers du genre, sortaient
                   <div class="multi-link">
                       <span> Love Me Do</span>
@@ -59,10 +58,7 @@
                           <a href="https://www.youtube.com/watch?v=1Au_QW5MJNI" target="_blank"><img class="yt-icon"
                                   src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
-                  </div>
-
-
-                  . La musique
+                  </div>. La musique
                   pop a bien évolué depuis cette époque.
                   La pop est une version plus douce et mélancolique du rock. C’est un genre musical accessible au
                   grand public.
@@ -81,11 +77,7 @@
                           <a href="https://www.youtube.com/channel/UCruKOlQdeAU0svDj0Bz54-A" target="_blank"><img
                                   class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
-                  </div>
-
-                  <a href="https://fr.wikipedia.org/wiki/George_Harrison" target="_blank"> George Herrison</a>
-                  en
-                  1969, sera repris et désigné par
+                  </div> en 1969, sera repris et désigné par
                   <div class="multi-link">
                       <span> Frank Sinatra</span>
                       <div>
@@ -151,7 +143,7 @@
                   généralement, le terme "standard" peut être appliqué à toute chanson populaire qui est devenue très
                   largement connue dans la culture traditionnelle.
               </p>
-              <p>Artistes:
+              <div class="paragraph">Artistes:
                   <div class="multi-link">
                       <span> Bob Dylan</span>
                       <div>
@@ -175,7 +167,7 @@
                                   class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
                   </div>
-              </p>
+              </div>
 
               <div class="spotify-integ">
                   <div>
@@ -201,7 +193,7 @@
                   Il est plus doux et plus accessible que le Rock and Roll. Les instruments utilisés sont le plus
                   souvent la guitare électrique, la basse, la batterie, le clavier et le synthétiseur.
               </p>
-              <p>Artistes:
+              <div class="paragraph">Artistes:
                   <div class="multi-link">
                       <span>les Beatles</span>
                       <div>
@@ -225,9 +217,7 @@
                                   class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
                   </div>
-
-
-              </p>
+              </div>
               <div class="spotify-integ">
                   <div>
                       <iframe src="https://open.spotify.com/embed/track/7iN1s7xHE4ifF5povM6A48"
@@ -261,7 +251,7 @@
                   traditionnel. La musique pop country regroupe souvent différents genres comme le rock, la pop et le
                   country .
               </p>
-              <p>Artistes:
+              <div class="paragraph">Artistes:
                   <div class="multi-link">
                       <span>Merle Haggard</span>
                       <div>
@@ -311,7 +301,7 @@
                                   class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
                   </div>
-              </p>
+              </div>
               <div class="spotify-integ">
                   <div>
                       <iframe src="https://open.spotify.com/embed/track/18GiV1BaXzPVYpp9rmOg0E"
@@ -408,39 +398,39 @@
                                   src="../images/icons/wiki.png" alt="wikipedia link" /></a>
                           <a href="https://www.youtube.com/results?search_query=Dua+Lipa" target="_blank"><img
                                   class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
+                      </div>,
+                  </div>
+                  <div class="multi-link">
+                      <span>Selena Gomez</span>
+                      <div>
+                          <a href="https://open.spotify.com/artist/0C8ZW7ezQVs4URX5aX7Kqx" target="_blank"><img
+                                  class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                          <a href="https://fr.wikipedia.org/wiki/Selena_Gomez" target="_blank"><img class="wiki-icon"
+                                  src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                          <a href="https://www.youtube.com/results?search_query=Selena+Gomez" target="_blank"><img
+                                  class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
-                      ,
-
-                      <div class="multi-link">
-                          <span> Selena Gomez</span>
-                          <div>
-                              <a href="https://open.spotify.com/artist/0C8ZW7ezQVs4URX5aX7Kqx" target="_blank"><img
-                                      class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
-                              <a href="https://fr.wikipedia.org/wiki/Selena_Gomez" target="_blank"><img
-                                      class="wiki-icon" src="../images/icons/wiki.png" alt="wikipedia link" /></a>
-                              <a href="https://www.youtube.com/results?search_query=Selena+Gomez" target="_blank"><img
-                                      class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
-                          </div>
-                      </div>
-                      <div class="spotify-integ">
-                          <div>
-                              <iframe src="https://open.spotify.com/embed/track/7ef4DlsgrMEH11cDZd32M6"
-                                  allow="encrypted-media"></iframe>
-                          </div>
-                          <div>
-                              <iframe src="https://open.spotify.com/embed/track/4yI3HpbSFSgFZtJP2kDe5m"
-                                  allow="encrypted-media"></iframe>
-                          </div>
-                      </div>
-                      <figure class="double-yt">
-                          <div>
-                              <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/DkeiKbqa02g"
-                                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                  allowfullscreen></iframe>
-                              <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/8u-_64S7plI"
-                                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                  allowfullscreen></iframe>
-                          </div>
+                  </div>
+              </div>
+              <div class="spotify-integ">
+                  <div>
+                      <iframe src="https://open.spotify.com/embed/track/7ef4DlsgrMEH11cDZd32M6"
+                          allow="encrypted-media"></iframe>
+                  </div>
+                  <div>
+                      <iframe src="https://open.spotify.com/embed/track/4yI3HpbSFSgFZtJP2kDe5m"
+                          allow="encrypted-media"></iframe>
+                  </div>
+              </div>
+              <figure class="double-yt">
+                  <div>
+                      <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/DkeiKbqa02g"
+                          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                          allowfullscreen></iframe>
+                      <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/8u-_64S7plI"
+                          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                          allowfullscreen></iframe>
+                  </div>
 
           </section>
           <section id="Synth">
@@ -466,7 +456,7 @@
                                   src="../images/icons/wiki.png" alt="wikipedia link" /></a>
                           <a href="https://www.youtube.com/user/neworder" target="_blank"><img class="yt-icon"
                                   src="../images/icons/yt.png" alt="youtube link" /></a>
-                      </div>
+                      </div>,
                   </div>
 
                   <div class="multi-link">
@@ -595,7 +585,6 @@
               </p>
               <div class="paragraph">
                   Artistes:
-
                   <div class="multi-link">
                       <span>Luis Fonsi</span>
                       <div>
@@ -606,9 +595,7 @@
                           <a href="https://www.youtube.com/channel/UCxoq-PAQeAdk_zyg8YS0JqA" target="_blank"><img
                                   class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
-                  </div>
-                  ,
-
+                  </div>,
                   <div class="multi-link">
                       <span>Ricky Martin</span>
                       <div>
@@ -620,8 +607,7 @@
                                   class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
                   </div>
-              </div>
-
+                  s</div>
 
               <div class="spotify-integ">
                   <div>
@@ -639,11 +625,14 @@
                       <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/kJQP7kiw5Fk"
                           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                           allowfullscreen></iframe>
+
                       <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/8BkYKwHLXiU"
                           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                           allowfullscreen></iframe>
                   </div>
+              </figure>
           </section>
+
           <section id="Baroque">
               <h2>
                   Baroque Pop
@@ -690,7 +679,7 @@
                           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                           allowfullscreen></iframe>
                   </div>
-
+              </figure>
           </section>
       </main>
       <footer>
