--- a/music/metal.html
+++ b/music/metal.html
@@ -319,7 +319,7 @@
             <p>
                 Le Black metal est un genre issu du <a href="#thrash">Thrash metal</a>, une version extrême de celui-ci.
                 Le genre a souvent un caractère très brutal et sombre.
-                Les aïgus sont beaucoup plus présents que dans d'autres styles de metal, couplé à du <a
+                Les aigus sont beaucoup plus présents que dans d'autres styles de metal, couplé à du <a
                     href="https://fr.wikipedia.org/wiki/Chant_guttural" target="_blank">chant guttural</a>.
                 Le côté malsain, sataniste et violent en font un style très souvent mal vu par la société.
             </p>
@@ -850,7 +850,7 @@
                     </div>
                 </div>
                 <figcaption>
-                    Deux titres de metal alternatif, Chop Suey! de SOAD (2001) -qui atteind bientôt 1Md de vues- et
+                    Deux titres de metal alternatif, Chop Suey! de SOAD (2001) -qui atteint bientôt 1Md de vues- et
                     Coming Undone de Korn (2005)
                 </figcaption>
             </figure>
