--- a/music/pop.html
+++ b/music/pop.html
@@ -68,7 +68,7 @@
                   You know I believe her now » , qui se traduit par « Je ne veux pas la quitter maintenant, tu sais
                   que je la crois maintenant ». Ce titre, ‘’Something’’, chanté par
                   <div class="multi-link">
-                      <span> George Herrison</span>
+                      <span> George Harrison</span>
                       <div>
                           <a href="https://open.spotify.com/artist/7FIoB5PHdrMZVC3q2HE5MS" target="_blank"><img
                                   class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
@@ -228,15 +228,24 @@
                           allow="encrypted-media"></iframe>
                   </div>
               </div>
-              <figure class="double-yt">
+              <figure class="yt-integration">
                   <div>
-                      <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/u6T5C-jzSH0"
-                          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                          allowfullscreen></iframe>
-                      <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/_uVb7Ju8VQk"
-                          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                          allowfullscreen></iframe>
+                      <div>
+                          <div>
+                              <iframe src="https://www.youtube-nocookie.com/embed/u6T5C-jzSH0"
+                                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                  allowfullscreen></iframe>
+                          </div>
+                      </div>
+                      <div>
+                          <div>
+                              <iframe src="https://www.youtube-nocookie.com/embed/_uVb7Ju8VQk"
+                                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                  allowfullscreen></iframe>
+                          </div>
+                      </div>
                   </div>
+              </figure>
 
           </section>
           <section id="Country">
@@ -672,10 +681,10 @@
 
               <figure class="double-yt">
                   <div>
-                      <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/o_1aF54DO60"
+                      <iframe class="yt-integration sp" src="https://www.youtube-nocookie.com/embed/o_1aF54DO60"
                           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                           allowfullscreen></iframe>
-                      <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/3-NTv0CdFCk"
+                      <iframe class="yt-integration sp" src="https://www.youtube-nocookie.com/embed/3-NTv0CdFCk"
                           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                           allowfullscreen></iframe>
                   </div>
