modif-integ-ytb

--- a/music/electro.html
+++ b/music/electro.html
@@ -92,10 +92,18 @@
                                 allow="encrypted-media"></iframe>
                         </div>
                     </div>
-                    <figure class="simple-yt">
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/IcrbM1l_BoI"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
+                    <figure class="yt-integration">
+                        <div>
+                            <div>
+                                <div>
+                                    <iframe class="yt-integration"
+                                        src="https://www.youtube-nocookie.com/embed/IcrbM1l_BoI"
+                                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                        allowfullscreen></iframe>
+                                </div>
+                            </div>
+                        </div>
+
                         <figcaption>
                             Wake me up, qui comptabilise plus d'1.8 milliards de vues.
                         </figcaption>
@@ -138,10 +146,16 @@
                         </div>
                     </div>
                     </div>
-                    <figure class="simple-yt">
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/gCYcHz2k5x0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
+                    <figure class="yt-integration">
+                        <div>
+                            <div>
+                                <div>
+                                    <iframe src="https://www.youtube-nocookie.com/embed/gCYcHz2k5x0"
+                                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                        allowfullscreen></iframe>
+                                </div>
+                            </div>
+                        </div>
                         <figcaption>
                             Animals, qui compte plus d'1.3 milliards de vues.
                         </figcaption>
@@ -182,10 +196,16 @@
                                 allow="encrypted-media"></iframe>
                         </div>
                     </div>
-                    <figure class="simple-yt">
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/Dr1nN__-2Po"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
+                    <figure class="yt-integration">
+                        <div>
+                            <div>
+                                <div>
+                                    <iframe src="https://www.youtube-nocookie.com/embed/Dr1nN__-2Po"
+                                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                        allowfullscreen></iframe>
+                                </div>
+                            </div>
+                        </div>
                         <figcaption>
                             Secrets, un featuring avec le dj KSHMR et la chanteuse australienne Vassy.
                         </figcaption>
