--- a/music/rap.html
+++ b/music/rap.html
@@ -47,10 +47,16 @@
                             allow="encrypted-media"></iframe>
                     </div>
                 </div>
-                <figure class="simple-yt">
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/ag_jeCgwVrw"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                <figure class="yt-integration">
+                    <div>
+                        <div>
+                            <div>
+                                <iframe src="https://www.youtube-nocookie.com/embed/ag_jeCgwVrw"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
                     <figcaption>
                         Le premier tube de rap, Rapper's Delight de Sugarhill Gang.
                     </figcaption>
@@ -105,17 +111,23 @@
                                     allow="encrypted-media"></iframe>
                             </div>
                         </div>
-                        <figure class="simple-yt">
-                            <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/YljnTp8yQFM"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
+                        <figure class="yt-integration">
+                            <div>
+                                <div>
+                                    <div>
+                                        <iframe src="https://www.youtube-nocookie.com/embed/YljnTp8yQFM"
+                                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                            allowfullscreen></iframe>
+                                    </div>
+                                </div>
+                            </div>
                             <figcaption>
                                 Le clip pierre, feuille, papier, ciseaux, dans lequel le groupe dresse un portrait de
                                 leur époque.
                             </figcaption>
                         </figure>
                     </article>
-                    
+
                     <article id="Nekfeu">
                         <div class="multi-link">
                             <span>Nekfeu</span>
@@ -145,10 +157,16 @@
                                     allow="encrypted-media"></iframe>
                             </div>
                         </div>
-                        <figure class="simple-yt">
-                            <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/YltjliK0ZeA"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
+                        <figure class="yt-integration">
+                            <div>
+                                <div>
+                                    <div>
+                                        <iframe src="https://www.youtube-nocookie.com/embed/YltjliK0ZeA"
+                                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                            allowfullscreen></iframe>
+                                    </div>
+                                </div>
+                            </div>
                             <figcaption>
                                 Le titre on verra, sorti en 2015, dont le clip sur YouTube a atteint environ 99 millions
                                 de vues.
@@ -189,10 +207,16 @@
                                     allow="encrypted-media"></iframe>
                             </div>
                         </div>
-                        <figure class="simple-yt">
-                            <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/BtyHYIpykN0"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
+                        <figure class="yt-integration">
+                            <div>
+                                <div>
+                                    <div>
+                                        <iframe src="https://www.youtube-nocookie.com/embed/BtyHYIpykN0"
+                                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                            allowfullscreen></iframe>
+                                    </div>
+                                </div>
+                            </div>
                             <figcaption>
                                 Le clip "au DD", au détail, qui fait référence à la vente de cannabis découpé en petite
                                 quantité.
@@ -230,10 +254,16 @@
                                     allow="encrypted-media"></iframe>
                             </div>
                         </div>
-                        <figure class="simple-yt">
-                            <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/2bjk26RwjyU"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
+                        <figure class="yt-integration">
+                            <div>
+                                <div>
+                                    <div>
+                                        <iframe src="https://www.youtube-nocookie.com/embed/2bjk26RwjyU"
+                                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                            allowfullscreen></iframe>
+                                    </div>
+                                </div>
+                            </div>
                             <figcaption>
                                 Le clip basique, dans lequel le Orelsan enchaîne les punchlines, comme "Les hommes
                                 politiques doivent mentir sinon tu voterais pas pour eux", et bien d'autres.
@@ -277,7 +307,7 @@
                         Si vous ne pouvez pas choisir qui vous préférez et que vous êtes divisés sur la personne à
                         soutenir, je vais le faire pour vous : "Allez-vous faire *** !" » .
                         Ses principaux titres sont Lose yourself, Stan, Mockingbird, Without me, Rap God.
-                        Il existe de nombreux autres rappeurs américains connus, comme 
+                        Il existe de nombreux autres rappeurs américains connus, comme
                         <a href="https://fr.wikipedia.org/wiki/Kanye_West" target="_blank ">Kanye West</a>,
                         <a href="https://fr.wikipedia.org/wiki/Fat_Joe" target="blank"> Fat Joe </a>,
                         <a href="https://fr.wikipedia.org/wiki/ASAP_Rocky" target="blank">Asap Rocky</a>,
@@ -292,14 +322,22 @@
                                 allow="encrypted-media"></iframe>
                         </div>
                     </div>
-                    <figure class="double-yt">
+                    <figure class="yt-integration">
                         <div>
-                            <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/LunHybOKIjU"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
-                            <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/_Yhyp-_hX2s"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
+                            <div>
+                                <div>
+                                    <iframe src="https://www.youtube-nocookie.com/embed/LunHybOKIjU"
+                                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                        allowfullscreen></iframe>
+                                </div>
+                            </div>
+                            <div>
+                                <div>
+                                    <iframe src="https://www.youtube-nocookie.com/embed/_Yhyp-_hX2s"
+                                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                        allowfullscreen></iframe>
+                                </div>
+                            </div>
                         </div>
                         <figcaption>
                             Le freestyle anti Trump, et la chanson lose yourself, écrite pendant le tournage du film 8
