--- a/music/pop.html
+++ b/music/pop.html
@@ -228,24 +228,23 @@
                           allow="encrypted-media"></iframe>
                   </div>
               </div>
-              <figure class="yt-integration">
-                  <div>
-                      <div>
-                          <div>
-                              <iframe src="https://www.youtube-nocookie.com/embed/u6T5C-jzSH0"
-                                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                  allowfullscreen></iframe>
-                          </div>
-                      </div>
-                      <div>
-                          <div>
-                              <iframe src="https://www.youtube-nocookie.com/embed/_uVb7Ju8VQk"
-                                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                  allowfullscreen></iframe>
-                          </div>
-                      </div>
-                  </div>
-              </figure>
+              <figure class="yt-integ">
+                <div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/u6T5C-jzSH0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/_uVb7Ju8VQk"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
 
           </section>
           <section id="Country">
@@ -376,16 +375,23 @@
                           allow="encrypted-media"></iframe>
                   </div>
               </div>
-              <figure class="double-yt">
-                  <div>
-                      <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/IdneKLhsWOQ"
-                          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                          allowfullscreen></iframe>
-                      <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/eP4eqhWc7sI"
-                          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                          allowfullscreen></iframe>
-                  </div>
-
+              <figure class="yt-integ">
+                <div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/IdneKLhsWOQ"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/eP4eqhWc7sI"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
           </section>
           <section id="Dance">
               <h2>
@@ -431,16 +437,23 @@
                           allow="encrypted-media"></iframe>
                   </div>
               </div>
-              <figure class="double-yt">
-                  <div>
-                      <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/DkeiKbqa02g"
-                          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                          allowfullscreen></iframe>
-                      <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/8u-_64S7plI"
-                          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                          allowfullscreen></iframe>
-                  </div>
-
+              <figure class="yt-integ">
+                <div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/DkeiKbqa02g"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/8u-_64S7plI"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
           </section>
           <section id="Synth">
               <h2>
@@ -491,15 +504,23 @@
                           allow="encrypted-media"></iframe>
                   </div>
               </div>
-              <figure class="double-yt">
-                  <div>
-                      <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/FYH8DsU2WCk"
-                          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                          allowfullscreen></iframe>
-                      <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/_6FBfAQ-NDE"
-                          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                          allowfullscreen></iframe>
-                  </div>
+              <figure class="yt-integ">
+                <div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/FYH8DsU2WCk"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/_6FBfAQ-NDE"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
           </section>
           <section id="K">
               <h2>
@@ -573,16 +594,23 @@
                           allow="encrypted-media"></iframe>
                   </div>
               </div>
-              <figure class="double-yt">
-                  <div>
-                      <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/MBdVXkSdhwU"
-                          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                          allowfullscreen></iframe>
-                      <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/SdzLl-XpJt0"
-                          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                          allowfullscreen></iframe>
-                  </div>
-
+              <figure class="yt-integ">
+                <div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/MBdVXkSdhwU"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/SdzLl-XpJt0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
           </section>
           <section id="Latin">
               <h2>
@@ -628,18 +656,23 @@
                           allow="encrypted-media"></iframe>
                   </div>
               </div>
-
-              <figure class="double-yt">
-                  <div>
-                      <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/kJQP7kiw5Fk"
-                          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                          allowfullscreen></iframe>
-
-                      <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/8BkYKwHLXiU"
-                          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                          allowfullscreen></iframe>
-                  </div>
-              </figure>
+              <figure class="yt-integ">
+                <div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/kJQP7kiw5Fk"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/8BkYKwHLXiU"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
           </section>
 
           <section id="Baroque">
@@ -678,17 +711,23 @@
                           allow="encrypted-media"></iframe>
                   </div>
               </div>
-
-              <figure class="double-yt">
-                  <div>
-                      <iframe class="yt-integration sp" src="https://www.youtube-nocookie.com/embed/o_1aF54DO60"
-                          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                          allowfullscreen></iframe>
-                      <iframe class="yt-integration sp" src="https://www.youtube-nocookie.com/embed/3-NTv0CdFCk"
-                          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                          allowfullscreen></iframe>
-                  </div>
-              </figure>
+              <figure class="yt-integ">
+                <div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/o_1aF54DO60"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/3-NTv0CdFCk"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
           </section>
       </main>
       <footer>
