--- a/music/electro.html
+++ b/music/electro.html
@@ -92,11 +92,11 @@
                                 allow="encrypted-media"></iframe>
                         </div>
                     </div>
-                    <figure class="yt-integration">
+                    <figure class="yt-integ">
                         <div>
                             <div>
                                 <div>
-                                    <iframe class="yt-integration"
+                                    <iframe
                                         src="https://www.youtube-nocookie.com/embed/IcrbM1l_BoI"
                                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                         allowfullscreen></iframe>
@@ -146,7 +146,7 @@
                         </div>
                     </div>
                     </div>
-                    <figure class="yt-integration">
+                    <figure class="yt-integ">
                         <div>
                             <div>
                                 <div>
@@ -188,7 +188,6 @@
                         derrière Calvin Harris,
                         qui a engrangé 63 millions de dollars entre le 1er juin 2015 et le 1er juin 2016.
                         Ses titres les plus populaires sont red lights, secrets, wasted.
-
                     </div>
                     <div class="spotify-integ">
                         <div>
@@ -196,7 +195,7 @@
                                 allow="encrypted-media"></iframe>
                         </div>
                     </div>
-                    <figure class="yt-integration">
+                    <figure class="yt-integ">
                         <div>
                             <div>
                                 <div>
@@ -211,7 +210,7 @@
                         </figcaption>
                     </figure>
                     <figure class="tiesto">
-                        <img src="../images/tiesto2.jpg" alt="" width="300" class="rounded-corners" />
+                        <img src="../images/tiesto2.jpg" alt="" width="350" class="rounded-corners" />
                         <figcaption>
                             Le dimanche 27 octobre, il est invité au grand prix de Formule 1 du Mexique pour
                             mixer après la cérémonie du podium au sein du stadium.
