--- a/music/rap.html
+++ b/music/rap.html
@@ -47,7 +47,7 @@
                             allow="encrypted-media"></iframe>
                     </div>
                 </div>
-                <figure class="yt-integration">
+                <figure class="yt-integ">
                     <div>
                         <div>
                             <div>
@@ -92,15 +92,16 @@
                                         class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                             </div>
                         </div>
-                        <figure class="no-overflow">
+                        <figure class="no-overflow float-right bordered columbine">
                             <img src="../images/columbine.jpg" alt="logo columbine" width="200"
                                 class="rounded-corners" />
                             <figcaption>
-                                le logo du groupe, «colombe-Kalash» ( kalachnikov, le fusil d'assaut russe AK-47)
+                                Le logo du groupe, «colombe-Kalash» <br /> ( kalachnikov, le fusil d'assaut russe
+                                AK-47).
                             </figcaption>
                         </figure>
                         <div class="paragraph">
-                            groupe de rap français formé en 2014, originaire de la banlieue de Rennes, leur troisième
+                            Groupe de rap français formé en 2014, originaire de la banlieue de Rennes, leur troisième
                             album Adieu bientôt a été certifié disque de platine.
                             Leur titres les plus connus sont pierre, feuille, papier, ciseau; c'est pas grave, adieu
                             bientôt, les prélis.
@@ -111,7 +112,7 @@
                                     allow="encrypted-media"></iframe>
                             </div>
                         </div>
-                        <figure class="yt-integration">
+                        <figure class="yt-integ">
                             <div>
                                 <div>
                                     <div>
@@ -157,7 +158,7 @@
                                     allow="encrypted-media"></iframe>
                             </div>
                         </div>
-                        <figure class="yt-integration">
+                        <figure class="yt-integ">
                             <div>
                                 <div>
                                     <div>
@@ -185,7 +186,7 @@
                                         class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                             </div>
                         </div>
-                        <figure class="float-right bordered">
+                        <figure class="float-right bordered pnl">
                             <img src="../images/pnl.jpg" alt="PNL" width="200" class="rounded-corners" />
                             <figcaption>
                                 La pochette de leur dernier album, deux frères.
@@ -207,7 +208,7 @@
                                     allow="encrypted-media"></iframe>
                             </div>
                         </div>
-                        <figure class="yt-integration">
+                        <figure class="yt-integ">
                             <div>
                                 <div>
                                     <div>
@@ -254,7 +255,7 @@
                                     allow="encrypted-media"></iframe>
                             </div>
                         </div>
-                        <figure class="yt-integration">
+                        <figure class="yt-integ">
                             <div>
                                 <div>
                                     <div>
@@ -315,6 +316,7 @@
                         <a href="https://fr.wikipedia.org/wiki/Jay-Z" target="blank">Jay Z</a>,
                         <a href="https://fr.wikipedia.org/wiki/Snoop_Dogg" target="blank">Snoop Dog</a>,
                         <a href="https://fr.wikipedia.org/wiki/Dr._Dre" target="blank">Dr Dre</a>, et beaucoup d'autres.
+                        <!--  ajouter liens spotify + youtube de chasque artiste   -->
                     </div>
                     <div class="spotify-integ">
                         <div>
@@ -322,7 +324,7 @@
                                 allow="encrypted-media"></iframe>
                         </div>
                     </div>
-                    <figure class="yt-integration">
+                    <figure class="yt-integ">
                         <div>
                             <div>
                                 <div>
@@ -342,10 +344,9 @@
                         <figcaption>
                             Le freestyle anti Trump, et la chanson lose yourself, écrite pendant le tournage du film 8
                             Mile,
-                            largement inspiré du parcours d'Eminem,
+                            largement inspiré du parcours d'Eminem, <br />
                             et pour laquelle il a remporté un Oscar de la meilleure chanson originale ainsi que deux
-                            Grammy
-                            awards.
+                            Grammy awards.
                         </figcaption>
                     </figure>
                 </section>
