--- a/music/pop.html
+++ b/music/pop.html
@@ -201,7 +201,8 @@
                   Il est plus doux et plus accessible que le Rock and Roll. Les instruments utilisés sont le plus
                   souvent la guitare électrique, la basse, la batterie, le clavier et le synthétiseur.
               </p>
-              <p>Artistes:
+              <div class="paragraph">
+                  Artistes:
                   <div class="multi-link">
                       <span>les Beatles</span>
                       <div>
@@ -213,6 +214,90 @@
                                   class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
                   </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                  
                   ,
                   <div class="multi-link">
                       <span>Queen</span>
@@ -227,7 +312,7 @@
                   </div>
 
 
-              </p>
+                </div>
               <div class="spotify-integ">
                   <div>
                       <iframe src="https://open.spotify.com/embed/track/7iN1s7xHE4ifF5povM6A48"
